# magstripe-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  msrv.yml  release.yml
src/: bitstream.rs  decoder.rs  lib.rs
src/decoder/: common.rs  custom.rs  track1.rs  track2.rs  track3.rs
tests/: analyze_bits.rs  debug_card.rs  find_format.rs  format_tests.rs  integration_tests.rs  known_cards.rs  raw_binary_test_cases.rs  test_cards.rs  trace_decode.rs  track2_tests.rs  understand_encoding.rs
