[package]
name = "magstripe-rs"
version = "0.1.0"
edition = "2024"
authors = [
  "Samir Bioud <samir@induct.ie>"
]
license = "MPL-v2.0"

description = "Magstripe bitstream decoder for Rust"

[[bin]]
name = "magstripe-decode"
path = "src/bin/magstripe-decode.rs"

[dependencies]
thiserror = "2.0.15"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
