[package]
name = "magstripe-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
authors = [
  "Samir Bioud <samir@induct.ie>"
]
license = "MPL-2.0"
description = "Magnetic stripe card data decoder library and CLI tool"
repository = "https://github.com/Induct-ie/magstripe-rs"
homepage = "https://github.com/Induct-ie/magstripe-rs"
documentation = "https://docs.rs/magstripe-rs"
readme = "README.md"
keywords = ["magnetic-stripe", "card-reader", "decoder", "track-data", "iso7811"]
categories = ["encoding", "parser-implementations", "command-line-utilities"]

[[bin]]
name = "magstripe-decode"
path = "src/bin/magstripe-decode.rs"

[dependencies]
thiserror = "2.0.15"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
